--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <button class="btn-cart" type="button">Корзина</button>
+    <button class="btn-basket" type="button">Корзина</button>
 </header>
 <main>
     <div class="products"></div>
