--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <div class="cart">
         <form action="#" class="search-form">
             <input type="text" class="search-field">
-            <button class="btn-search" type="submit">
-            </button>
+            <button class="btn-search" type="submit"></button>
         </form>
         <button class="btn-cart" type="button">Корзина</button>
         <div class="cart-block invisible"></div>
