--- a/index.html
+++ b/index.html
@@ -8,37 +8,21 @@
 <body>
 <div id="app">
     <header>
+        <div class="logo"></div>
         <div class="cart">
-            <form action="#" class="search-form">
-                <input type="text" class="search-field" v-model="searchLine">
-                <button class="btn-search" type="submit" @click="FilterGoods">
-                </button>
-            </form>
-            <button class="btn-cart" type="button" @click="isVisible = !isVisible">Корзина</button>
-            <div class="cart-block" :class="divClasses">
-                <div class="product-item ">
-                    <div class="desc">
-                        <h3>name</h3>
-                        <p>price</p>
-                        <button class="buy-btn" @click="">Купить</button>
-        
-                    </div>  
-                </div>
-            </div>
+            <search ref="search"></search>
+            <cart ref="cart"></cart>
+        </div>
     </header>
     <main>
-        <div class="products">
-            <div class="product-item" v-for="product of filteredGoods" :key="product.id_product">
-                <img :src="imgCatalog" alt="Some img">
-                <div class="desc">
-                    <h3>{{product.product_name}}</h3>
-                    <p>{{product.price}}</p>
-                    <button class="buy-btn" @click="addProduct(product)">Купить</button>
-                </div>
-            </div>
-        </div>
+        <products ref="products"></products>
     </main>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
-<script src="./js/main.js"></script>
+</div>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/CartComp.js"></script>
+    <script src="js/ProducComp.js"></script>
+    <script src="js/SearchComp.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
