--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,23 @@
 <body>
 <div id="app">
     <header>
-        <div class="logo"></div>
+        <div class="logo">Интернет-магазин</div>
         <div class="cart">
-            <search ref="search"></search>
+            <filter-el></filter-el>
             <cart ref="cart"></cart>
         </div>
     </header>
     <main>
         <products ref="products"></products>
+        <error ref="error"></error>
     </main>
 </div>
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="js/CartComp.js"></script>
     <script src="js/ProducComp.js"></script>
-    <script src="js/SearchComp.js"></script>
+    <script src="js/FilterComp.js"></script>
+    <script src="js/ErrorComp.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
